--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //侧滑
+    implementation 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
+    //侧划recyclerview，不适用recyclerview嵌套recyclerview
+    implementation 'com.yanzhenjie:recyclerview-swipe:1.1.3'
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     //noinspection GradleCompatible
